src/user-management-service/deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: registration-service-service-route
  namespace: pipelines-registration-service-service
spec:
  host: registration-service-service.apps.bst2.paas.psnc.pl
  to:
    kind: Service
    name: proxy
  port:
    targetPort: 9000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
